@startuml
class User{
        username : String
        password : String
        email : String
        name : String
        lastname : String
        DNI : String
}
class ComiteeMember{
  rank: Enumerable
}



class JobApplication {
        name: String
        description: String
        requirements: List<String>
        evaluationCriteria: List<String>
        currentPhase: Phase
}

class Phase {
        phaseNumber: int
        name: String
        initialDate: DateTime
        finalDate: DateTime
}
class Applicant {
        email : String
        name : String
        lastname : String
        DNI : String
}
class Qualification {
        mark: int
        observation: String
}
class Document {
        name: String
        path: String
}

User "1" --> "*" ComiteeMember:Belongs >

Qualification "*" -- "1" ComiteeMember:Evaluate <

ComiteeMember "5" -- "1" JobApplication:Administrates >

Document "*" --> "*" Phase:Have <
JobApplication "1" o-- "3" Phase:Have > 

JobApplication "1" o-- "*" Applicant:Have >
Qualification "5" -- "1" Applicant:Evaluated by < 
Document "*" --> "0..1" Applicant:Belongs >
@enduml
